# typeid-cli

./: .gitignore  README.md  pyproject.toml
.claude/: settings.local.json
typeid_cli/: __init__.py  commands.py  id_utils.py  main.py
